@@ -31,15 +31,21 @@ test assocd-1.4 {testing setting assoc data} testsetassocdata {
    testsetassocdata abc "abc d e f"
 } ""
 
-test assocd-2.1 {testing getting assoc data} testgetassocdata {
-   testgetassocdata a
-} 2
-test assocd-2.2 {testing getting assoc data} testgetassocdata {
-   testgetassocdata 123
-} 456
-test assocd-2.3 {testing getting assoc data} testgetassocdata {
+test assocd-2.1 {testing getting assoc data} -setup {
+    testsetassocdata a 2
+} -constraints {testgetassocdata} -body {
+    testgetassocdata a
+} -result 2
+test assocd-2.2 {testing getting assoc data} -setup {
+    testsetassocdata 123 456
+} -constraints {testgetassocdata} -body {
+    testgetassocdata 123
+} -result 456
+test assocd-2.3 {testing getting assoc data} -setup {
+   testsetassocdata abc "abc d e f"
+} -constraints {testgetassocdata} -body {
    testgetassocdata abc
-} {abc d e f}
+} -result "abc d e f"
 test assocd-2.4 {testing getting assoc data} testgetassocdata {
    testgetassocdata xxx
 } ""
